= Domain Model Diagram
:plantuml:

[plantuml, domain-model, png]
----
@startuml

entity User {
  id : SERIAL
  username : VARCHAR
  email : VARCHAR
  password_hash : VARCHAR
  created_at : TIMESTAMP
}

entity Library {
    id: SERIAL

}

entity Game {
  id : SERIAL
  title : VARCHAR
  description : TEXT
  price : DECIMAL
  release_date : DATE
  developer : VARCHAR
}

entity Review {
  id : SERIAL
  user_id : INT
  game_id : INT
  rating : INT
  comment : TEXT
  created_at : TIMESTAMP
}

entity Wishlist {
  id : SERIAL
  user_id : INT
  game_id : INT
  added_at : TIMESTAMP
}

' Relationships with 1..* notation
Library "1" -- "1" User : has
Library "0..*" -- "0..*" Game : has
User "1" -- "0..*" Review : writes
Game "1" -- "0..*" Review : has

User "1" -- "0..*" Wishlist : owns
Game "1" -- "0..*" Wishlist : added_to

@enduml
----
